# cupertino-theme

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
fonts/: Makefile.am
icons/: Makefile.am
icons/Cupertino/: index.theme
icons/Cupertino-blue/: index.theme  mimes
icons/Cupertino-blue-dark/: index.theme  mimes
icons/Cupertino-blue-dark/places/: 24
icons/Cupertino-blue-light/: index.theme  preferences
icons/Cupertino-dark/: index.theme
icons/Cupertino-dark/apps/: scalable
icons/Cupertino-dark/categories/: 32
icons/Cupertino-dark/devices/: scalable
icons/Cupertino-dark/emblems/: 16  22  24
icons/Cupertino-dark/mimes/: 16  22  scalable
icons/Cupertino-dark/status/: 16  22  24  32
icons/Cupertino-green/: devices  index.theme  status
icons/Cupertino-green-dark/: emotes  index.theme
icons/Cupertino-green-dark/places/: 22
icons/Cupertino-green-light/: animations  index.theme  mimes
icons/Cupertino-green-light/places/: 16  24
icons/Cupertino-grey/: animations  index.theme
icons/Cupertino-grey-dark/: actions  index.theme
icons/Cupertino-grey-light/: emotes  index.theme
icons/Cupertino-grey-light/places/: 22
icons/Cupertino-light/: index.theme  places
icons/Cupertino-light/status/: symbolic
icons/Cupertino-nord/: index.theme
icons/Cupertino-nord-dark/: index.theme
icons/Cupertino-nord-dark/places/: 16
icons/Cupertino-nord-light/: index.theme
icons/Cupertino-nord-light/places/: symbolic
icons/Cupertino-orange/: index.theme
icons/Cupertino-orange-dark/: animations  devices  index.theme
icons/Cupertino-orange-light/: actions  devices  index.theme
icons/Cupertino-orange/places/: 22
icons/Cupertino-purple/: actions  index.theme  preferences
icons/Cupertino-purple-dark/: categories  index.theme  status
icons/Cupertino-purple-light/: categories  emblems  index.theme
icons/Cupertino-purple/places/: 24
icons/Cupertino-red/: index.theme
icons/Cupertino-red-dark/: apps  index.theme  preferences
icons/Cupertino-red-dark/places/: symbolic
icons/Cupertino-red-light/: apps  index.theme  status
icons/Cupertino-yellow/: apps  categories  emblems  emotes  index.theme
icons/Cupertino-yellow-dark/: emblems  index.theme
icons/Cupertino-yellow-light/: index.theme
icons/Cupertino-yellow/places/: 16  symbolic
other/: Makefile.am
other/firefox/: README.md  tweaks.sh
other/firefox/chrome/: userChrome-adaptive.css  userChrome-darker.css  userChrome-nord.css  userChrome.css  userContent-adaptive.css  userContent-darker.css  userContent-nord.css  userContent.css
other/firefox/chrome/Cupertino/: theme-adaptive.css  theme-darker.css  theme-nord.css  theme.css
themes/: Cupertino  Makefile.am
themes/Cupertino-Dark/: index.theme  index.theme.in
themes/Cupertino-Dark-solid/: index.theme  index.theme.in
themes/Cupertino-Dark-solid/gtk-3.0/: gtk-dark.css  gtk.css
themes/Cupertino-Dark/gtk-2.0/: gtkrc
themes/Cupertino-Dark/gtk-3.0/: gtk-dark.css  gtk.css
themes/Cupertino-Light/: index.theme  index.theme.in
themes/Cupertino-Light-solid/: index.theme  index.theme.in
themes/Cupertino-Light-solid/gtk-3.0/: gtk-dark.css  gtk.css
themes/Cupertino-Light/gtk-2.0/: gtkrc
themes/Cupertino-Light/gtk-3.0/: gtk-dark.css  gtk.css
wallpapers/: Makefile.am  cupertino-wallpaper.xml.in
