backgroundsdir = $(datadir)/backgrounds/cupertino
backgrounds_DATA = \
	cupertino-day.jpeg \
	cupertino-night.jpeg

matebackgroundsdir = $(datadir)/mate-background-properties
matebackgrounds_DATA = \
	cupertino-wallpaper.xml

gnomebackgroundsdir = $(datadir)/gnome-background-properties
gnomebackgrounds_DATA = \
	cupertino-wallpaper.xml

EXTRA_DIST = \
	$(backgrounds_DATA) \
	cupertino-wallpaper.xml.in

DISTCLEANFILES = \
	cupertino-wallpaper.xml
