backgroundsdir = $(datadir)/backgrounds/cupertino
backgrounds_DATA = \
	cupertino-day.jpeg \
	cupertino-night.jpeg \
	aurora.jpg \
	balloon.jpg \
	bridge.jpg \
	canyon.jpg \
	cliff.jpg \
	clouds.jpg \
	fisherman.jpg \
	fjord.jpg \
	islands.jpg \
	lasers.jpg \
	mountain.jpg \
	road.jpg \
	sand.jpg \
	spacex-falcon-heavy-demo-mission.jpg \
	spacex-nusantara-satu-mission.jpg \
	temple.jpg \
	trees.jpg \
	waterfall.jpg \
	license.txt

matebackgroundsdir = $(datadir)/mate-background-properties
matebackgrounds_DATA = \
	cupertino-wallpaper.xml

gnomebackgroundsdir = $(datadir)/gnome-background-properties
gnomebackgrounds_DATA = \
	cupertino-wallpaper.xml

EXTRA_DIST = \
	$(backgrounds_DATA) \
	cupertino-wallpaper.xml.in

DISTCLEANFILES = \
	cupertino-wallpaper.xml
